--- a/index.html
+++ b/index.html
@@ -6,23 +6,13 @@
     <title>Main title</title>
     <meta charset="utf-8" />
 
-    <meta property="og:title" content="og title">
-    <meta name="description" content="meta description">
+    <meta property="og:title" content="original title">
     <meta property="og:description" content="og description">
-    <meta name="theme-color" content="#eeff00">
-    <meta property="og:image"
-        content="https://cdn.discordapp.com/avatars/727050199893016606/412250e175615757700ea2d2f62185c0.png?size=256">
-    <meta name="twitter:card" content="summary_large_image">
-
-    <script lang="javascript">
-
-        document.querySelector('meta[property="og:description"]').setAttribute("content", "updated og description");
-        document.querySelector('meta[name="description"]').setAttribute("content", "updated meta description");
-        document.querySelector('meta[property="og:title"]').setAttribute("content", "updated og title");
-        document.querySelector('meta[property="og:image"]').setAttribute("content", "https://cdn.discordapp.com/avatars/1220521103592652822/b1599e23cdca04d352d5af2a7aab3929.png?size=256");
-
-
-    </script>
+    <meta name="theme-color" content="#e2b714">
+    <meta property="og:url" content="https://monkeytype.com/" />
+    <meta property="og:image" content="https://monkeytype.com/images/mtsocial.png" />
+    <meta name="twitter:title" content="Monkeytype | A minimalistic, customizable typing test" />
+    <meta name="twitter:image" content="https://monkeytype.com/images/mtsocial.png" />
 </head>
 
 <body>
