--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta property="og:title" content="original title">
     <meta property="og:description" content="og description">
     <meta name="theme-color" content="#e2b714">
-    <meta property="og:url" content="https://monkeytype.com/" />
-    <meta property="og:image" content="https://monkeytype.com/images/mtsocial.png" />
+    <meta property="og:url" content="https://profiles.knutfischer.com/" />
+    <meta property="og:image" content="https://profiles.knutfischer.com/images/generic.png" />
     <meta name="twitter:title" content="Monkeytype | A minimalistic, customizable typing test" />
-    <meta name="twitter:image" content="https://monkeytype.com/images/mtsocial.png" />
+    <meta name="twitter:image" content="https://profiles.knutfischer.com/images/generic.png" />
     <meta name="profilePrefetch" content="">
 </head>
 
