--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 <head>
     <title>Main title</title>
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#e2b714">
 
     <meta property="og:type" content="object" />
     <meta property="og:title" content="original title">
     <meta property="og:description" content="og description">
-    <meta name="theme-color" content="#e2b714">
     <meta property="og:url" content="https://profiles.knutfischer.com/" />
     <meta property="og:image" content="https://profiles.knutfischer.com/images/generic.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+
     <meta name="twitter:title" content="Monkeytype | A minimalistic, customizable typing test" />
-    <meta name="twitter:image" content="https://profiles.knutfischer.com/images/generic.png" />
+    <meta name="twitter:image:src" content="https://profiles.knutfischer.com/images/generic.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <meta name="profilePrefetch" content="">
 
 </head>
