--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <head>
     <title>Main title</title>
     <meta charset="utf-8" />
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
+
     <meta name="theme-color" content="#e2b714">
 
     <meta property="og:type" content="object" />
